# personal-workbench

./: .gitignore  Cargo.toml  LICENSE  README.md  design-qa.md
docs/: architecture.md  configuration.md
src/: diagnostics.rs  error.rs  lib.rs  main.rs  session.rs  settings.rs  storage.rs
src/audit/: event.rs  mod.rs  recorder.rs  report.rs  token.rs
src/context/: mod.rs
src/graph/: builder.rs  edge.rs  executor.rs  mod.rs  node.rs  state.rs  workflow.rs
src/graph/hooks/: mod.rs
src/graph/nodes/: mod.rs  model.rs  tool.rs
src/graph/subagent/: mod.rs
src/memory/: mod.rs
src/policy/: approval.rs  guard.rs  mod.rs  rule.rs
src/runtime/: mod.rs
src/service/: mod.rs
src/tools/: browser.rs  call.rs  config.rs  descriptor.rs  github.rs  health.rs  loader.rs  local_index.rs  mod.rs  registry.rs  runtime.rs  sql.rs  ssh.rs  web_fetch.rs
src/tools/agent_cli/: mod.rs
src/tools/anysearch/: mod.rs
src/tools/builtin/: mod.rs
src/tools/mcp/: mod.rs
src/tools/mineru/: mod.rs
src/tools/model/: mod.rs
src/tools/skills/: executor.rs  loader.rs  manifest.rs  mod.rs  watcher.rs
src/tools/verification/: mod.rs  report.rs
src/tui/: mod.rs  terminal.rs
tests/: audit_flow.rs  context_policy.rs  diagnostics.rs  flow_branches.rs  graph_boundary.rs  graph_workflow.rs  memory.rs  runtime_task_manager.rs  sessions.rs  settings_storage.rs  skills.rs  tools_registry.rs
web/: .npmrc  index.html  package-lock.json  package.json
web/src/: App.jsx  styles.css
