[package]
name = "pwcli"
version = "0.1.0"
edition = "2021"
description = "Personal Workbench CLI agent runtime"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
crossterm = "0.28"
unicode-width = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
fastembed = "5.17.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
russh = { version = "0.62", default-features = false, features = ["ring", "flate2", "rsa"] }
axum = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
async-stream = "0.3"
open = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
